--- a/css/customStyles.css
+++ b/css/customStyles.css
@@ -128,8 +128,22 @@ p.ex1 {
     float: right;
   } */
 
+
+
+
+  
   ::placeholder {
     color: #666666 !important;
+    opacity: 1; /* Firefox */
+  }
+
+  #contact-form input::placeholder {
+    color: white !important;
+    opacity: 1; /* Firefox */
+  }
+
+  #contact-form textarea::placeholder {
+    color: white !important;
     opacity: 1; /* Firefox */
   }
   
@@ -226,6 +240,10 @@ p.ex1 {
     text-align: right;
 }
 
+.rrtl {
+    float: left;
+}
+
 .tech ul {
     padding: 0px 0px 0px 0px;
     margin-bottom: 10px;
@@ -236,7 +254,7 @@ p.ex1 {
 .tech li{
     display:inline-block;
     text-align: center;
-    color: #f0f1f7;
+    color: #dadada;
     margin: 5px 0px 5px 0px;
   }
 
@@ -253,4 +271,22 @@ p.ex1 {
     display: inline-block;
     position: absolute;
     right: 0;
+}
+
+.skill__title {
+    color: #f0f1f7;
+    font-size: 14px;
+    margin-bottom: .5rem;
+    font-family: inherit;
+    font-weight: 600;
+    line-height: 1.2;
+}
+
+.multiselecte__title {
+    color: #666666;
+    font-size: 14px;
+    margin-bottom: .5rem;
+    font-family: inherit;
+    font-weight: 500;
+    line-height: 1.2;
 }
