--- a/style.css
+++ b/style.css
@@ -4404,7 +4404,7 @@ blockquote i:before {
   background: #eff1f7;
   position: relative;
   padding-top: 95px;
-  background: url(images/bg/footer-bg.jpg);
+  background: url(images/bg/footer-bg2.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
